# dns-secheck

./: Cargo.toml  README.md  malicious-domains.json
.github/workflows/: release-windows.yml
src/lib/: lib.rs
src/lib/cache/: mod.rs
src/lib/constants/: mod.rs
src/lib/dns/: client.rs  mod.rs  resolver.rs  util.rs
src/lib/dns_client/: mod.rs
src/lib/dns_protocol/: mod.rs
src/lib/dns_server/: mod.rs
src/lib/http_client/: mod.rs
src/lib/http_server/: mod.rs
src/lib/net/: mod.rs  tcp_listener.rs  tcp_multiplexer.rs  udp_multiplexer.rs  udp_socket.rs
src/lib/tcp/: mod.rs
src/lib/udp/: mod.rs
src/lib/util/: base32.rs  mod.rs  status.rs  string.rs  test_report.rs  test_result.rs
